Usar Path en vez de Paths para obtener el Path del archivo